# screenctrl

./: Cargo.toml  LICENSE  LICENSE-MIT  PKGBUILD  README.md
src/: main.rs
